// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test artwork queries should find an artwork by id 1`] = `
Object {
  "data": Object {
    "findArtwork": Object {
      "title": "amazingsongTitle",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should not find an artwork by id and throw an error 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Couldn't find an artwork with id 'abc'],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query both auctions and fixed 1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "handle": "amazingsong",
        "saleType": "auction",
      },
      Object {
        "handle": "hello",
        "saleType": "auction",
      },
      Object {
        "handle": "history",
        "saleType": "auction",
      },
      Object {
        "handle": "amazingsong2",
        "saleType": "fixed",
      },
      Object {
        "handle": "fixedwithhistory",
        "saleType": "fixed",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only auctions  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "handle": "history",
        "saleType": "auction",
      },
      Object {
        "handle": "hello",
        "saleType": "auction",
      },
      Object {
        "handle": "amazingsong",
        "saleType": "auction",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only fixed sales  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "handle": "fixedwithhistory",
        "saleType": "fixed",
      },
      Object {
        "handle": "amazingsong2",
        "saleType": "fixed",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only fixed sales that are listed  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "handle": "fixedwithhistory",
        "saleType": "fixed",
      },
      Object {
        "handle": "amazingsong2",
        "saleType": "fixed",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
